# sccli

./: '  .env.example  .gitignore  .pylintrc  Makefile  README.md  auth.py  config.py  config.yml.example  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  soundcloud.py  test.db
_config/: database.py  query_builder.py  server.py  tokens_file.py
actions/: authenticate_user_action.py  fetch_my_liked_tracks_action.py  get_exit_message_action.py  get_help_message_action.py  get_my_liked_tracks_list_action.py  get_unknown_command_message_action.py  get_welcome_message_action.py  play_track_action.py  welcome_action.py
api_requests/: authentication_request.py  fetch_my_liked_tracks_request.py  fetch_track_from_streaming_url_request.py  fetch_track_streaming_url_request.py  fetch_track_streams_request.py  followings_request.py  followings_tracks_request.py  get_track_request.py  get_track_streaming_url_request.py  me_tracks_request.py  refresh_token_request.py  user_info_request.py
commands/: exit_command.py  fetch_followings_tracks_command.py  fetch_my_liked_tracks_command.py  followings_command.py  followings_tracks_command.py  get_track_command.py  get_track_streaming_url_command.py  help_command.py  my_liked_tracks_command.py  my_tracks_command.py  play_track_command.py  track_command.py  track_streaming_url_command.py  unknown_command.py  user_command.py  welcome_command.py
core/: action.py  auth.py  base.py  command.py  config.py  container.py  database.py  di_container.py  dto.py  log.py  logger.py  model.py  player.py  query.py  query_builder.py  repository.py  request.py  resource.py  response.py  server.py  settings.py  shell.py  table.py  task.py  url_generator.py  user.py  value.py
databases/: sqlite.py  sqlite_database.py
default_settings/: app.py  database.py  messages.py  proxy.py  server.py  soundcloud.py  tests.py  tests_database.py  tests_tokens.py  tokens.py
di/: actions.py  actions_container.py  auth_container.py  auth_requests.py  auth_requests_container.py  commands.py  commands_container.py  config_container.py  database_container.py  dto_container.py  models_container.py  query_builder_container.py  repositories_container.py  repository_container.py  requests.py  requests_container.py  resources_container.py  server_container.py  subactions_container.py  tables.py  tables_container.py  tasks_container.py  views_container.py
dto/: authentication_dto.py  tokens_dto.py  track_dto.py  user_dto.py
(+140 files in other folders)
