[project]
name = "sccli"
version = "0.1.0"
description = "A command-line interface for SoundCloud."
authors = [
    { name = "gewoehnlich", email = "gewoehnlich@gewoehnlich.org" },
]
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.12.14",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
