[project]
name = "sccli"
version = "0.0.1"
description = "a command-line interface for soundcloud"
authors = [
    { name = "gewoehnlich", email = "gewoehnlich@disroot.org" }
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "mypy (>=1.19.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "textual (>=8.2.4,<9.0.0)",
    "mpv (>=1.0.8,<2.0.0)",
    "textual-image (>=0.13.2,<0.14.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = ["."]

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
